--- a/fininclusion - dataprep.ipynb
+++ b/fininclusion - dataprep.ipynb
@@ -5790,13 +5790,7 @@
       "247/247 [==============================] - 0s 2ms/step - loss: 0.5713 - accuracy: 0.7013\n",
       "Epoch 79/100\n",
       "247/247 [==============================] - 0s 2ms/step - loss: 0.5699 - accuracy: 0.6967\n",
-      "Epoch 80/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 80/100\n",
       "247/247 [==============================] - 0s 2ms/step - loss: 0.5645 - accuracy: 0.7078\n",
       "Epoch 81/100\n",
       "247/247 [==============================] - 0s 2ms/step - loss: 0.5677 - accuracy: 0.7014\n",
@@ -6089,7 +6083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 231,
    "id": "06f7bd1f",
    "metadata": {},
    "outputs": [],
@@ -6151,7 +6145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 233,
    "id": "9d502373",
    "metadata": {},
    "outputs": [
@@ -6161,111 +6155,17 @@
      "text": [
       "Comparison table\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>F1 score</th>\n",
-       "      <th>Support</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AdaBoost</td>\n",
-       "      <td>0.751724</td>\n",
-       "      <td>0.919533</td>\n",
-       "      <td>0.827204</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GradientBoosting</td>\n",
-       "      <td>0.752648</td>\n",
-       "      <td>0.922128</td>\n",
-       "      <td>0.828813</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DecisionTree</td>\n",
-       "      <td>0.744946</td>\n",
-       "      <td>0.932511</td>\n",
-       "      <td>0.828242</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RandomForest</td>\n",
-       "      <td>0.719431</td>\n",
-       "      <td>0.985075</td>\n",
-       "      <td>0.831553</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XGBoost</td>\n",
-       "      <td>0.752779</td>\n",
-       "      <td>0.922777</td>\n",
-       "      <td>0.829155</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SupportVector</td>\n",
-       "      <td>0.744670</td>\n",
-       "      <td>0.951979</td>\n",
-       "      <td>0.835659</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Model  Precision    Recall  F1 score  Support\n",
-       "0          AdaBoost   0.751724  0.919533  0.827204     1541\n",
-       "1  GradientBoosting   0.752648  0.922128  0.828813     1541\n",
-       "2      DecisionTree   0.744946  0.932511  0.828242     1541\n",
-       "3      RandomForest   0.719431  0.985075  0.831553     1541\n",
-       "4           XGBoost   0.752779  0.922777  0.829155     1541\n",
-       "5     SupportVector   0.744670  0.951979  0.835659     1541"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#compare models for imbalanced data\n",
-    "compare_models(X_train2, X_test2, y_train2, y_test2)"
+    "imbres = compare_models(X_train2, X_test2, y_train2, y_test2)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 234,
    "id": "8b695480",
    "metadata": {},
    "outputs": [
@@ -6275,111 +6175,16 @@
      "text": [
       "Comparison table\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>F1 score</th>\n",
-       "      <th>Support</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AdaBoost</td>\n",
-       "      <td>0.798485</td>\n",
-       "      <td>0.683971</td>\n",
-       "      <td>0.736805</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GradientBoosting</td>\n",
-       "      <td>0.805818</td>\n",
-       "      <td>0.665152</td>\n",
-       "      <td>0.728759</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DecisionTree</td>\n",
-       "      <td>0.781685</td>\n",
-       "      <td>0.764439</td>\n",
-       "      <td>0.772966</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RandomForest</td>\n",
-       "      <td>0.806428</td>\n",
-       "      <td>0.716418</td>\n",
-       "      <td>0.758763</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XGBoost</td>\n",
-       "      <td>0.797277</td>\n",
-       "      <td>0.683971</td>\n",
-       "      <td>0.736291</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SupportVector</td>\n",
-       "      <td>0.797512</td>\n",
-       "      <td>0.748864</td>\n",
-       "      <td>0.772423</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Model  Precision    Recall  F1 score  Support\n",
-       "0          AdaBoost   0.798485  0.683971  0.736805     1541\n",
-       "1  GradientBoosting   0.805818  0.665152  0.728759     1541\n",
-       "2      DecisionTree   0.781685  0.764439  0.772966     1541\n",
-       "3      RandomForest   0.806428  0.716418  0.758763     1541\n",
-       "4           XGBoost   0.797277  0.683971  0.736291     1541\n",
-       "5     SupportVector   0.797512  0.748864  0.772423     1541"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#compare models for undersampled data\n",
-    "compare_models(X_train_us, X_test2, y_train_us, y_test2)"
+    "usres = compare_models(X_train_us, X_test2, y_train_us, y_test2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 235,
    "id": "d1ea4cc6",
    "metadata": {},
    "outputs": [
@@ -6389,106 +6194,23 @@
      "text": [
       "Comparison table\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>F1 score</th>\n",
-       "      <th>Support</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AdaBoost</td>\n",
-       "      <td>0.774786</td>\n",
-       "      <td>0.821544</td>\n",
-       "      <td>0.797480</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GradientBoosting</td>\n",
-       "      <td>0.768032</td>\n",
-       "      <td>0.863725</td>\n",
-       "      <td>0.813073</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DecisionTree</td>\n",
-       "      <td>0.788576</td>\n",
-       "      <td>0.689812</td>\n",
-       "      <td>0.735895</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RandomForest</td>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>0.713822</td>\n",
-       "      <td>0.754458</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XGBoost</td>\n",
-       "      <td>0.771242</td>\n",
-       "      <td>0.842310</td>\n",
-       "      <td>0.805211</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SupportVector</td>\n",
-       "      <td>0.797799</td>\n",
-       "      <td>0.752758</td>\n",
-       "      <td>0.774624</td>\n",
-       "      <td>1541</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Model  Precision    Recall  F1 score  Support\n",
-       "0          AdaBoost   0.774786  0.821544  0.797480     1541\n",
-       "1  GradientBoosting   0.768032  0.863725  0.813073     1541\n",
-       "2      DecisionTree   0.788576  0.689812  0.735895     1541\n",
-       "3      RandomForest   0.800000  0.713822  0.754458     1541\n",
-       "4           XGBoost   0.771242  0.842310  0.805211     1541\n",
-       "5     SupportVector   0.797799  0.752758  0.774624     1541"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#compare models for oversampled data\n",
-    "compare_models(X_train_os, X_test2, y_train_os, y_test2)"
+    "osres = compare_models(X_train_os, X_test2, y_train_os, y_test2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "6536eb47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imbres.to_csv(\"imbres.csv\")\n",
+    "usres.to_csv(\"usres.csv\")\n",
+    "osres.to_csv(\"osres.csv\")"
    ]
   },
   {
